Fix T66931: "reset to default value" of metaball - viewport resolution is way too high

Maniphest Tasks: T66931

Differential Revision: https://developer.blender.org/D5251